add support for deepspeed, revise crowded reverberant signal model with corresponding scripts, add the baselines

--- a/notebooks/dataset_preprocess.ipynb
+++ b/notebooks/dataset_preprocess.ipynb
@@ -2439,9 +2439,10 @@
    "outputs": [],
    "source": [
     "# mixed speech synthesis\n",
-    "from scripts import synthesize_speech\n",
+    "from scripts import synthesize_speech_noise, synthesize_speech\n",
     "\n",
-    "synthesize_speech()"
+    "synthesize_speech_noise()  # synthesize the mixed speech with noise beyond the predefined area and reverberation info\n",
+    "synthesize_speech()  # synthesize the mixed speech with reverberation info only"
    ]
   },
   {
